# Snake_OpenGL

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  changelog.txt  compile_commands.json  rendererHRD.txt  snakeOpenGL.config
assets/: logo.rgba
src/: main.cpp
src/config/: config_manager.cpp  config_manager.hpp  core_config.hpp  game_config.hpp  renderer_config.hpp  window_config.hpp
src/core/: action.hpp  clock.hpp  config_manager.cpp  config_manager.hpp  input.cpp  input.hpp  input_manager.cpp  input_manager.hpp  logger.cpp  logger.hpp
src/game/: apple.cpp  apple.hpp  cell.hpp  enums.hpp  field.cpp  field.hpp  game.cpp  game.hpp  game_variables.hpp  snake.cpp  snake.hpp  snake_parts_enum.hpp
src/render/: field_texture.hpp  quad_vertices.hpp  renderer.cpp  renderer.hpp  shader_program.cpp  shader_program.hpp  shaders.hpp
src/render/textures/: cap_texture.hpp  eye-dead_texture.hpp  eye-point_texture.hpp  eye_texture.hpp  field_texture.hpp  pause_texture.hpp  snake_atlas.hpp  snake_body_texture.hpp  snake_head_texture.hpp  snake_tail_texture.hpp  snake_turn_texture.hpp  tail-corner_texture.hpp  tail-tail_texture.hpp
src/textures/: apple_texture.hpp
src/window/: window.cpp  window.hpp  window_variables.hpp
